--- a/index.html
+++ b/index.html
@@ -58,5 +58,20 @@
         <button id="footer_add_button">ADD A COMMENT...</button>
       </div>
     </div>
+    <div class="delete_modal hidden_modal">
+      <div class="delete_comment">
+        <div class="delete_text">
+          <div class="delete_title">Delete comment</div>
+          <div class="make_sure_text">
+            Are you sure you want to delete this comment? this will remove the
+            comment and can't be undone.
+          </div>
+        </div>
+        <div class="button_for_delete">
+          <button class="dont_delete_button">NO,CANCEL</button>
+          <button class="sure_delete_button">YES,DELETE</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
